# sapo-cli

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/api/: client.rs
src/commands/: login.rs  mod.rs  monitor.rs  scan.rs  status.rs  sync.rs  toggle.rs  trust.rs  uninstall.rs  update.rs  upgrade.rs  wrap.rs
src/config/: mod.rs  store.rs  tests.rs
src/sandbox/: analyze.rs  mod.rs
src/utils/: colors.rs
tests/: cli_integration.rs  e2e_flow.rs
