[package]
name = "sapo-cli"
version = "1.0.0"
edition = "2021"
authors = ["Salta"]
description = "Pre-install protection for npm packages"
license = "MIT"
repository = "https://github.com/salta/sapo"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors
colored = "2.1"

# Home directory detection
dirs = "5.0"

# UUID generation for device ID
uuid = { version = "1.6", features = ["v4"] }

# Platform detection
cfg-if = "1.0"

# Process execution
which = "6.0"

# Lightweight regex for parsing
regex-lite = "0.1"

[dev-dependencies]
# For integration tests
tempfile = "3.10"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols

[[bin]]
name = "sapo-cli"
path = "src/main.rs"
